--- a/style.css
+++ b/style.css
@@ -5,40 +5,35 @@ header {
 }
 
 header .sony_logo img {
-    height: 12px;
+    height: 20px;
 }
 
 header nav img {
-    height: 25px;
+    height: 40px;
+}
+/********** /siteheader ***********/
+
+section.one {
+    margin-top: 100px;
 }
 
+
+
+
+
+/********** /section1 ***********/
 @media screen and (min-width: 576px) {
-    header nav img {
-        height: 30px;
-    }
-    header .sony_logo img {
-        height: 15px;
-    }
-}
+
+}  
 
 
 @media screen and (min-width: 768px) {
-    header nav img {
-        height: 40px;
-    }
-    header .sony_logo img {
-        height: 20px;
-    }
-}
+
+}    
 
 @media screen and (min-width: 1200px) {
-    header nav img {
-        height: 50px;
-    }
-    header .sony_logo img {
-        height: 25px;
-    }
-}
+
+}   
 
 header img.chevron {
     width: 0.5rem;
@@ -57,18 +52,9 @@ header li.icon {
     font-size: 1.5rem;
 }
 
-
 section.jumbo {
-    position:relative;
-}
-
-section.jumbo img {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    height: 100%;
-    object-fit: fill;
+    background-image: url(./img/jumbo-bg.png);
+    background-position-x: center;
 }
 
 .debug section.one{
