--- a/style.css
+++ b/style.css
@@ -26,6 +26,25 @@ section.one img {
 }
 
 /********** /section1 ***********/
+section.two .thumb img {
+    width: 100%;
+    border-radius: 1rem;
+}
+
+section.two .thumb img {
+    border: 4px solid #2284d500;
+}
+
+section.two .thumb.active img {
+    border: 2px solid #2285D5;
+    padding: 2px;
+}
+
+
+
+
+/********** /section2 ***********/
+
 @media screen and (min-width: 576px) {
     .height {
         height: 620px;
