--- a/style.css
+++ b/style.css
@@ -208,6 +208,8 @@ section.four img{
 .col-md-20 {
     width: 20%;
 }
+}
+
 @media screen and (min-width: 1200px) {
     .col-xl-20 {
     width: 20%;
