--- a/style.css
+++ b/style.css
@@ -218,6 +218,13 @@ section.ten img {
 section.ten div[class^="container"] {
     max-width: 720px;
 }
+
+/********** /section10 ***********/
+
+footer {
+    background-color: #00439C;
+}
+/********** /footer***********/
 /************************* colors ******************************* */
 
 .bg_darkgrey {
@@ -259,6 +266,7 @@ section.ten div[class^="container"] {
 .bg_lightergrey {
     background-color: #f5f5f5;
 }
+
 /* utilities */
 .col-20 {
     width: 20%;
@@ -274,4 +282,9 @@ section.ten div[class^="container"] {
     .col-xl-20 {
     width: 20%;
 }
+}
+
+
+.debug {
+    height:400px;
 }
