--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ section.two .thumb img {
     border-radius: 1rem;
 }
 
+section.two .thumb {
+    padding-top: 0.5rem;
+    transition: 0.5s;
+}
+
+section.two .thumb:hover {
+    padding-top: 0.2rem;
+}
+
 section.two .thumb img {
     border: 4px solid #2284d500;
 }
@@ -141,11 +150,24 @@ section.three i , section.five .card i {
 
 .thumb_cont {
     opacity: 0.6;
+    transition: 1.5s;
+}
+
+.thumb_cont.active {
+    border-bottom: 2px solid #0D79D0;
+    opacity: 1;
 }
 
 .thumb_cont:hover {
-    border-bottom: 2px solid #2D64E6;;
     opacity: 1;
+}
+
+section.three .button_cont {
+    padding:3px;
+}
+
+section.three .button_cont:hover {
+    border:1px solid #2D64E6;
 }
 /********** /section3 ***********/
 
