--- a/style.css
+++ b/style.css
@@ -420,3 +420,16 @@ button.btn_rounder span:hover {
 #navbarDropdown:focus .chevron_op {
     display: inline-block;
 }
+
+header li.d-flex.flex-column.align-items-center:hover{
+    box-shadow: 0 0 11px rgba(33,33,33,.5);
+    border-radius:5px;
+}
+
+a.dropdown-item {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+a.dropdown-item:hover {
+    background-color: rgba(255, 255, 255, 0);
+}
